Small cleanups; default template no-cache settings; added run-production and run-staging targets, still mostly for testing though (real production shouldn't run through ant
git-svn-id: https://moqui.svn.sourceforge.net/svnroot/moqui/trunk@258 77d6ed94-2e2c-4b3b-a835-e9bc6a43c7e3