@@ -105,9 +105,24 @@ This Work includes contributions authored by David E. Jones, not as a
 
     <target name="run" depends="war" description="Run Moqui Web server with Embedded Winstone (run the executable war file)">
         <java jar="moqui-${version}.war" fork="true">
+            <jvmarg value="-Xmx256M"/>
+            <jvmarg value="-XX:MaxPermSize=64m"/>
+        </java>
+    </target>
+    <target name="run-staging" depends="war" description="Run Moqui Web server in production mode">
+        <java jar="moqui-${version}.war" fork="true">
             <jvmarg value="-Xms128M"/>
             <jvmarg value="-Xmx256M"/>
             <jvmarg value="-XX:MaxPermSize=64m"/>
+            <jvmarg value="-Dmoqui.conf=conf/staging/MoquiStagingConf.xml"/>
+        </java>
+    </target>
+    <target name="run-production" depends="war" description="Run Moqui Web server in production mode">
+        <java jar="moqui-${version}.war" fork="true">
+            <jvmarg value="-Xms128M"/>
+            <jvmarg value="-Xmx256M"/>
+            <jvmarg value="-XX:MaxPermSize=64m"/>
+            <jvmarg value="-Dmoqui.conf=conf/production/MoquiProductionConf.xml"/>
         </java>
     </target>
     <target name="load" depends="war" description="Run Moqui data loader (run the executable war file with -load)">
